# rspace_registry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/rspace-registry/: Cargo.toml
crates/rspace-registry-core/: Cargo.toml
crates/rspace-registry-core/src/: digest.rs  gc.rs  lib.rs  manifest.rs  migrate.rs  multi.rs  quota.rs  replicate.rs  repo_router.rs  storage.rs
crates/rspace-registry-fs/: Cargo.toml
crates/rspace-registry-fs/src/: lib.rs
crates/rspace-registry/src/: auth.rs  error.rs  handlers.rs  jobs.rs  k8s.rs  lib.rs  main.rs  router.rs
crates/rspace-registry/tests/: k8s_auth.rs  migrate.rs  multi_partition.rs  oci_roundtrip.rs  quota.rs  repo_router.rs
deploy/k8s/: 10-serviceaccount-rbac.yaml  20-repository-crd.yaml  30-repository-rbac-example.yaml  40-deployment.yaml
docs/: k8s-auth.md  storage-classes.md
enhancements/: move-ci-to-forcicd.md
packaging/: Containerfile  build-packages.sh  rspace-registry.env  rspace-registry.service
