[package]
name = "rspace-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI Distribution Spec v1.1 registry head, built on rspace-registry-core"

[lib]
name = "rspace_registry"
path = "src/lib.rs"

[[bin]]
name = "rspace-registry"
path = "src/main.rs"

[dependencies]
rspace-registry-core = { path = "../rspace-registry-core" }
rspace-registry-fs = { path = "../rspace-registry-fs" }
# Used inside the lib so admin endpoints can mint a new backend when
# repointing a route at runtime.

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
hyper.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
bcrypt.workspace = true
base64.workspace = true
axum-server.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tempfile.workspace = true
